--- a/basbolRes__V.1.html
+++ b/basbolRes__V.1.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" -->
         <!-- integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" /> -->
-   
+    <link rel="shortcut icon" href="01.png">
+
        
 </head>
 <body>
